fix(migration): make the live writer runnable + recover POC P10 illustrations
The live migration writer had never been executed, so three latent defects
only surfaced once it ran against a scratch clone:

1. The media INSERT listed 16 columns but 17 values (14 placeholders, 13
   setters), so every run failed with "No value specified for parameter 14".
   Pre-existing in a6bd376b. Removed the stray placeholder.
2. MediaBindings.byAttachment was a Map.copyOf, which throws on get(null).
   A product or article legitimately has no thumbnail/OG attachment id, and
   setAsset() already writes NULL columns for a null binding, so the lookup
   must return null rather than throw. Eight call sites were affected; fixed
   at the source by keeping a null-key-tolerant unmodifiable view.
3. The rewriter only matched wp-content/uploads on bigbike.vn/bbi.vn while
   validatePostWrite scans for the substring on any host, so hotlinked
   uploads were neither rewritten nor removed and tripped the post-write
   guard. Added poc-helmet.com to the reviewed host list.

Owner override v4 corrects the v3 premise for product 39478: its seven
description illustrations were never lost, they were embedded straight from
poc-helmet.com and all still serve HTTP 200. The owner chose to copy them
into our own store rather than drop them, so v4 approves them as recovery
files (approvedFiles 4 -> 11) and carries no source-side dead-image
fallbacks. v1-v3 are kept unchanged as the audit trail.

Validated: 58 Live*Test green; preflight reaches zero blockers with plan
digest 1d7f9e871a219fa820ad44eba897afc4d437831960bb2a738cb17254c75bbc63
stable across two runs; the writer completed on a clone and then on live
with identical per-domain counts.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>